...
    self.window?.rootViewController?.presentedViewController?.present(alert, animated: true, completion: nil)
  }

  func confirmAlert(topic: String, onConfirm: (() -> Void)?, onCancel: (() -> Void)?) {
    let confirmationAlert = UIAlertController(title: topic, message: "Sind Sie sich sicher?", preferredStyle: .alert)
    
    confirmationAlert.addAction(UIAlertAction(title: "OK", style: .default, handler: { (action: UIAlertAction!) in
      if (onConfirm != nil) {
        onConfirm!()
      }
    }))
    
    confirmationAlert.addAction(UIAlertAction(title: "Abbrechen", style: .cancel, handler: { (action: UIAlertAction!) in
...
