...

    timerList.dataSource = self
    timerList.delegate = self

    timerList.addSubview(self.refreshControl)

    title = "Timers"
  }

  override func viewDidAppear(_ animated: Bool) {
    let appDelegate = UIApplication.shared.delegate as! AppDelegate
    if appDelegate.isAuthenticated() {
      load()
...
